@@ -1,5 +1,10 @@
 # $Id$
 
+2008-07-18	Konstantin V. Arkhipov
+
+	* core/Form/Primitives/PrimitiveTimestampRange.class.php: new
+	primitive introduced.
+
 2008-07-24	Denis M. Gabaidulin
 
 	* main/Base/AbstractProtoClass.class.php: isPropertyExists method added.
